# PROYECTO_ERP

./: .env.example  .gitignore  Makefile  README.md  compose.prod.yaml  compose.yaml
.agents/: AGENTS.md
.githooks/: pre-commit  pre-push
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase1_auth_tables.py  0003_phase2_rbac_tables.py  0004_phase3_employees_departments.py  0005_phase4_audit_logs.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  deps.py  exception_handlers.py  router.py
backend/app/api/v1/routers/: __init__.py  audit_logs.py  auth.py  departments.py  employees.py  health.py  roles.py  users.py
backend/app/api/v1/schemas/: __init__.py  audit.py  auth.py  common.py  employees.py  rbac.py  users.py
backend/app/application/: __init__.py  password_policy.py
backend/app/application/audit/: __init__.py  audit_service.py
backend/app/application/auth/: __init__.py  authenticate_user.py  get_current_user.py  logout.py  refresh_token.py  register_user.py
backend/app/application/employees/: __init__.py  department_crud.py  employee_crud.py
backend/app/application/rbac/: __init__.py  catalogue.py  check_permission.py  role_assignment.py  role_crud.py
backend/app/application/users/: __init__.py  admin_actions.py  get_user.py  list_users.py  update_user.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  audit.py  auth.py  employee.py  rbac.py  user.py
backend/app/domain/ports/: __init__.py  audit_repository.py  department_repository.py  employee_repository.py  permission_repository.py  refresh_token_repository.py  role_repository.py  token_service.py  user_repository.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/db/: __init__.py  base.py  session.py
backend/app/infrastructure/models/: __init__.py  audit.py  auth.py  employee.py  rbac.py  user.py
backend/app/infrastructure/repositories/: __init__.py  audit_repository.py  department_repository.py  employee_repository.py  permission_repository.py  refresh_token_repository.py  role_repository.py  token_service.py  user_repository.py
backend/app/middlewares/: __init__.py  rate_limit.py  request_context.py  security_headers.py
backend/seed/: __init__.py  seed_data.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py  conftest.py  test_app.py  test_audit_logs.py  test_auth_flow.py  test_employees.py  test_filters.py  test_rate_limit.py  test_rbac.py  test_users_crud.py
backend/tests/integration/: __init__.py  test_placeholder.py
backend/tests/integration/api/: test_security_bounds.py
backend/tests/unit/: __init__.py  fakes.py  rbac_fakes.py  test_authenticate_user.py  test_config.py  test_exceptions.py  test_logout_and_register.py  test_password_policy.py  test_rbac_use_cases.py  test_refresh_token.py  test_security.py  test_users_use_cases.py
docs/: api.md  architecture.md  database-schema.md  design-system.md  module-creation-guide.md  rbac-model.md  red-team-blue-team.md  security-and-audit.md  testing-strategy.md  troubleshooting-faq.md  ux-ui-guide.md
frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
nginx/: nginx.prod.conf
reports/: security-deep-report.html  security-deep-report.json  security-report.html  security-report.json  trivy-report.json  zap.yaml
scripts/: notify.ps1  reset-db.sh  run-tests.sh  security-scan.ps1  security-scan.sh  seed.sh  setup.sh
(+46 files in other folders)
